--- a/xiugaiban.html
+++ b/xiugaiban.html
@@ -25,12 +25,23 @@
 	 <div class="logo-container">
       <img class="logo" src="https://www.baidu.com/img/bd_logo1.png" alt="baidu"/>
     </div>
-</div>
-<div class="form-container">
-	<div class="input-s">
+    	<div class="input-s">
 		<input class="input-l" type="text" name="search">
 		<button class="key">百度一下</button>
 	</div>
+</div>
+<footer class="page-footer">
+  <div class="qrcode-contaienr">
+    <img class="qrcode" src="https://ss1.bdstatic.com/5eN1bjq8AAUYm2zgoY3K/r/www/cache/static/protocol/https/home/img/qrcode/zbios_efde696.png">
+  </div>
+  <p class="footer-info">
+    <a href="javascript:;">把百度设为主页</a>
+    <a href="javascript:;">关于百度About</a>
+    <a href="javascript:;">Baidu百度推广</a>
+  </p>
+  <p class="footer-info">©2018 Baidu <a href="javascript:;">使用百度前必读</a> <a href="javascript:;">意见反馈</a> 京ICP证030173号  <a href="javascript:;">京公网安备11000002000001号</a></p>
+</footer>
+
 </div>
 </body>
 </html>
